Set MUI baseline, add buttons to show User

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--  MUI : To ensure proper rendering and touch zooming for all devices, add the responsive viewport meta tag to your <head> element -->
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
